demos/validating-admission-policy/good/bad-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: policy-rejected
spec:
  replicas: 1
  selector:
    matchLabels:
      app: policy-rejected
  template:
    metadata:
      labels:
        app: policy-rejected
    spec:
      containers:
        - name: nginx
          image: nginx:1.27
