demos/validating-admission-policy/good/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: policy-compliant
  labels:
    app.kubernetes.io/name: policy-compliant
    app.kubernetes.io/part-of: validating-admission-policy-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: policy-compliant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: policy-compliant
        app.kubernetes.io/part-of: validating-admission-policy-demo
    spec:
      containers:
        - name: nginx
          image: nginx:1.27
          ports:
            - containerPort: 80
